--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       cusomer.maybe it's just filling up space , or may be <br/>
       people will actually read it.who know? All i know
       is that it looks nice<br/><br/><b  
-          <b> -Thor,God of Thunder </b> <p>
+          <b> -Thor God of Thunder </b> <p>
   </div>
 </div>
 
